# StairwayDetection

./: .gitignore  CMakeLists.txt  README.md
include/stairs/: StairVector.h  Stairs.h  normal_3d_omp.h  planeshape.h  preanalysis.h  recognition.h  region_growing.h  regiongrowing.h  regions.h  segmentPatch.h  splitmerge.h  voxSAC.h
include/stairs/impl/: normal_3d.hpp  normal_3d_omp.hpp  region_growing.hpp
src/: StairVector.cpp  Stairs.cpp  planeshape.cpp  preanalysis.cpp  recognition.cpp  regiongrowing.cpp  regions.cpp  segmentPatch.cpp  splitmerge.cpp  stairDetectionMain.cpp  voxSAC.cpp
